Updating to latest JDA version. Also moved the search bar on the UI. Added new feature to sort the list of users in the UI as well and group them by status.